# bacchus-sign

./: Cargo.toml
.github/workflows/: build.yml
debian/scripts/: postinst
debian/units/: bacchus-sign.service  bacchus-sign.socket
src/: main.rs
