[package]
name = "bacchus-sign"
authors = ["Wonwoo Choi <vbchunguk@bacchus.snucse.org>"]
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
libsystemd = "0.3.1"
log = "0.4.14"
syslog = "5.0.0"
thiserror = "1.0.26"
tweetnacl = "0.4.0"

[dependencies.getrandom]
version = "0.2.3"
features = ["std"]

[dependencies.structopt]
version = "0.3.23"
default-features = false

[dependencies.tokio]
version = "1.11.0"
features = ["rt-multi-thread", "fs", "io-util", "net", "signal", "macros"]
