[package]
name = "bacchus-sign"
description = "Pubkey signing agent for id.snucse.org"
authors = ["Wonwoo Choi <vbchunguk@bacchus.snucse.org>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
env_logger = "0.9.0"
libsystemd = "0.5.0"
log = "0.4.14"
syslog = "6.0.1"
thiserror = "1.0.26"
tweetnacl = "0.4.0"

[dependencies.clap]
version = "3.1.0"
default-features = false
features = ["std", "derive"]

[dependencies.getrandom]
version = "0.2.3"
features = ["std"]

[dependencies.tokio]
version = "1.11.0"
features = ["rt-multi-thread", "fs", "io-util", "net", "signal", "macros"]

[profile.release]
lto = true
debug = 1  # line information only

[package.metadata.deb]
maintainer = "Bacchus <contact@bacchus.snucse.org>"
section = "misc"
maintainer-scripts = "debian/scripts/"

[package.metadata.deb.systemd-units]
unit-scripts = "debian/units/"
stop-on-upgrade = false
